--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@angular/compiler": "~11.2.1",
     "@angular/core": "~11.2.1",
     "@angular/forms": "~11.2.1",
+    "@angular/localize": "~11.2.1",
     "@angular/platform-browser": "~11.2.1",
     "@angular/platform-browser-dynamic": "~11.2.1",
     "@angular/router": "~11.2.1",
-    "bootstrap": "^4.6.0",
-    "ngx-bootstrap": "^6.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.0",
+    "@schematics/angular": "^11.2.11",
+    "bootstrap": "^4.5.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
