--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ng-bootstrap/ng-bootstrap": "^9.1.0",
     "@schematics/angular": "^11.2.11",
     "bootstrap": "^4.5.0",
+    "bootstrap-icons": "^1.4.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
